fix the bug where the image poster where not showing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,9 +90,7 @@ body {
 
 .movies-section {
     background-color: #000;
-    padding: 4rem 0;
     position: relative;
-    margin-top: -1px;
 }
 
 .section-title {
